# Master-s_work

./: README.md
DATA/Bank_Account_Fraud_Dataset_Suite/: Ссылка на датасет.txt
Experiments/1/: 2_VKR_modeling_11_01_2023.ipynb  base.py  results Bank_Account_Fraud_Dataset.xlsx  results.xlsx
Experiments/2/: base.py  results.xlsx
Experiments/3/: CCF_DL.ipynb  baf_results.xlsx  base.py  ccf_results.xlsx  Эксперименты DL.docx
Experiments/4/: Custom.pth  GAN_BAF.ipynb  GAN_CCF.ipynb
Experiments/5/: BAF.ipynb  CCF.ipynb  baf_results.xlsx  ccf_results.xlsx
Service/TGbot/: LE_employment_status_BAF.pkl  LE_housing_status_BAF.pkl  LE_payment_type_BAF.pkl  LE_source_BAF.pkl  NORM_PREP_GAN_BAF.pkl  OHE_PREP_GAN_BAF.pkl  QT_BAF.pkl  StackingClassifier_ccf.pickle  base.py  main.py  models.py
Service/fastapi/: .gitmodules  main.py  pyproject.toml
Service/fastapi/app/: settings.py
Service/fastapi/app/models/: CCF_GAN.pth  Custom_1_BAF.pth  StackingClassifier.pickle  common.py
Service/fastapi/app/models/baf/: custom_1_model.py  custom_2_model.py  custom_3_model.py  generate.py  sk_model.py
Service/fastapi/app/models/ccf/: custom_model.py  generate.py  lgbm_model.py  plots.py
Service/fastapi/app/web/: app.py  schemas.py
Service/fastapi/app/web/routes/: __init__.py
Service/fastapi/app/web/routes/baf/: __init__.py  custom_1_model.py  custom_2_model.py  custom_3_model.py  generate.py  sk_model.py
Service/fastapi/app/web/routes/ccf/: __init__.py  custom_model.py  generate.py  lgbm_model.py  plots.py
Service/fastapi1/: Credit_Card_Fraud_Detection.ipynb  main.py  (+1 more)
(+57 files in other folders)
